fix(layout): direction change to ltr on mobiles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  direction: ltr;
+}
+
 html[lang^='fa'],
 html[lang^='ar'],
 html[lang^='he'] {
